--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "logseq-mark-map-ts",
+  "name": "logseq-mark-map",
   "version": "0.0.1",
   "license": "MIT",
   "main": "index.html",
@@ -38,6 +38,7 @@
   "dependencies": {
     "@logseq/libs": "0.0.1-alpha.26",
     "markmap-lib": "^0.11.6",
+    "markmap-toolbar": "^0.1.6",
     "markmap-view": "^0.2.6"
   }
 }
