--- a/package.json
+++ b/package.json
@@ -13,27 +13,27 @@
     "build:prod": "webpack --config=webpack.config.js --mode=production"
   },
   "devDependencies": {
-    "@types/node": "^14.14.14",
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "@typescript-eslint/parser": "^4.10.0",
+    "@types/node": "^16.4.3",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
     "autoprefixer": "^10.3.1",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^7.0.0",
-    "css-loader": "^5.0.1",
-    "eslint": "^7.16.0",
+    "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.2.0",
+    "eslint": "^7.31.0",
     "eslint-loader": "^4.0.2",
-    "html-webpack-plugin": "^5.0.0-alpha.14",
-    "mini-css-extract-plugin": "^1.3.3",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.1.0",
     "postcss": "^8.3.6",
     "postcss-loader": "^6.1.1",
-    "sass": "^1.30.0",
-    "sass-loader": "^10.1.0",
-    "tailwindcss": "^2.2.6",
-    "ts-loader": "^8.0.12",
-    "typescript": "^4.1.3",
-    "webpack": "^5.11.0",
-    "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "sass": "^1.36.0",
+    "sass-loader": "^12.1.0",
+    "tailwindcss": "^2.2.7",
+    "ts-loader": "^9.2.4",
+    "typescript": "^4.3.5",
+    "webpack": "^5.46.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "@logseq/libs": "0.0.1-alpha.26",
