--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "html2canvas": "^1.3.2",
     "markmap-lib": "^0.11.6",
     "markmap-toolbar": "^0.1.6",
-    "markmap-view": "^0.2.6"
+    "markmap-view": "^0.2.6",
+    "org": "^0.2.0",
+    "turndown": "^7.1.1"
   }
 }
