--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@logseq/libs": "0.0.1-alpha.29",
+    "cheerio": "^1.0.0-rc.10",
     "html2canvas": "^1.3.2",
     "markmap-lib": "^0.11.6",
     "markmap-toolbar": "^0.1.6",
