fix: support logseq page reference

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "markmap-toolbar": "^0.1.6",
     "markmap-view": "^0.2.6",
     "org": "^0.2.0",
+    "string-replace-async": "^3.0.2",
     "turndown": "^7.1.1"
   }
 }
