--- a/package.json
+++ b/package.json
@@ -13,38 +13,38 @@
     "build:prod": "webpack --config=webpack.config.js --mode=production"
   },
   "devDependencies": {
-    "@types/node": "^16.9.6",
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
-    "autoprefixer": "^10.3.5",
+    "@types/node": "^16.11.10",
+    "autoprefixer": "^10.4.0",
     "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^9.0.1",
-    "css-loader": "^6.3.0",
-    "eslint": "^7.32.0",
+    "copy-webpack-plugin": "^10.0.0",
+    "css-loader": "^6.5.1",
     "eslint-loader": "^4.0.2",
-    "html-webpack-plugin": "^5.3.2",
-    "mini-css-extract-plugin": "^2.3.0",
-    "postcss": "^8.3.7",
-    "postcss-loader": "^6.1.1",
-    "sass": "^1.42.1",
-    "sass-loader": "^12.1.0",
-    "tailwindcss": "^2.2.15",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.4.5",
+    "postcss": "^8.4.1",
+    "postcss-loader": "^6.2.0",
+    "sass": "^1.43.5",
+    "sass-loader": "^12.3.0",
+    "tailwindcss": "^2.2.19",
     "ts-loader": "^9.2.6",
-    "typescript": "^4.4.3",
-    "webpack": "^5.53.0",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.2.1"
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.6.0"
   },
   "dependencies": {
-    "@logseq/libs": "0.0.1-alpha.29",
+    "@logseq/libs": "0.0.1-alpha.32",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "cheerio": "^1.0.0-rc.10",
-    "html2canvas": "^1.3.2",
+    "eslint": "^7.32.0",
+    "html2canvas": "^1.3.3",
     "markmap-lib": "^0.11.6",
     "markmap-toolbar": "^0.1.6",
     "markmap-view": "^0.2.6",
     "org": "^0.2.0",
     "string-replace-async": "^3.0.2",
     "text-ellipsis": "^1.0.3",
-    "turndown": "^7.1.1"
+    "turndown": "^7.1.1",
+    "typescript": "^4.4.4"
   }
 }
