--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "title": "Logseq Markmap"
   },
   "scripts": {
+    "format": "npm run prettier:fix && npm run lint:fix",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint:fix": "npm run lint -- --fix",
+    "prettier": "prettier -c .",
+    "prettier:fix": "npm run prettier -- --write",
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build && cp LICENSE icon.png package.json dist/"
   },
@@ -30,9 +35,14 @@
     "vue": "^3.2.31"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
     "@vitejs/plugin-vue": "^2.2.2",
     "autoprefixer": "^10.4.2",
+    "eslint": "^8.9.0",
+    "eslint-config-prettier": "^8.4.0",
     "postcss": "^8.4.6",
+    "prettier": "^2.5.1",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.5.5",
     "vite": "^2.8.4",
