--- a/package.json
+++ b/package.json
@@ -19,34 +19,34 @@
     "build": "vue-tsc --noEmit && vite build && cp LICENSE icon.png package.json dist/"
   },
   "dependencies": {
-    "@logseq/libs": "^0.0.1-alpha.35",
+    "@logseq/libs": "^0.0.6",
     "cheerio": "^1.0.0-rc.10",
-    "d3": "^7.3.0",
-    "hotkeys-js": "^3.8.7",
+    "d3": "^7.4.4",
+    "hotkeys-js": "^3.9.3",
     "html2canvas": "^1.4.1",
-    "markmap-common": "^0.1.6",
-    "markmap-lib": "^0.12.0",
-    "markmap-toolbar": "^0.2.0",
-    "markmap-view": "^0.2.7",
+    "markmap-common": "^0.13.0",
+    "markmap-lib": "^0.13.2",
+    "markmap-toolbar": "^0.13.2",
+    "markmap-view": "^0.13.2",
     "org": "^0.2.0",
     "string-replace-async": "^3.0.2",
     "text-ellipsis": "^1.0.3",
     "turndown": "^7.1.1",
-    "vue": "^3.2.31"
+    "vue": "^3.2.33"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.12.1",
-    "@typescript-eslint/parser": "^5.12.1",
-    "@vitejs/plugin-vue": "^2.2.2",
-    "autoprefixer": "^10.4.2",
-    "eslint": "^8.9.0",
-    "eslint-config-prettier": "^8.4.0",
-    "postcss": "^8.4.6",
-    "prettier": "^2.5.1",
-    "tailwindcss": "^3.0.23",
-    "typescript": "^4.5.5",
-    "vite": "^2.8.4",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "@vitejs/plugin-vue": "^2.3.2",
+    "autoprefixer": "^10.4.7",
+    "eslint": "^8.15.0",
+    "eslint-config-prettier": "^8.5.0",
+    "postcss": "^8.4.13",
+    "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.24",
+    "typescript": "^4.6.4",
+    "vite": "^2.9.8",
     "vite-plugin-cdn-externals": "^1.0.5",
-    "vue-tsc": "^0.31.4"
+    "vue-tsc": "^0.34.11"
   }
 }
