--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "prettier": "prettier -c .",
     "prettier:fix": "npm run prettier -- --write",
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build && cp LICENSE icon.png package.json dist/"
+    "build": "vite build && cp LICENSE icon.png package.json dist/"
   },
   "dependencies": {
-    "@logseq/libs": "^0.0.6",
+    "@logseq/libs": "^0.0.8",
     "alpinejs": "^3.10.3",
     "cheerio": "^1.0.0-rc.12",
     "d3": "^7.6.1",
-    "hotkeys-js": "^3.9.4",
+    "hotkeys-js": "^3.9.5",
     "html2canvas": "^1.4.1",
     "jquery": "^3.6.0",
     "lightbox2": "^2.11.3",
@@ -38,18 +38,17 @@
     "vue": "^3.2.37"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.30.7",
-    "@typescript-eslint/parser": "^5.30.7",
-    "@vitejs/plugin-vue": "^3.0.1",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.20.0",
+    "@typescript-eslint/eslint-plugin": "^5.34.0",
+    "@typescript-eslint/parser": "^5.34.0",
+    "@vitejs/plugin-vue": "^3.0.3",
+    "autoprefixer": "^10.4.8",
+    "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.16",
     "prettier": "^2.7.1",
-    "tailwindcss": "^3.1.6",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.7.4",
-    "vite": "^3.0.2",
-    "vite-plugin-cdn-externals": "^1.0.5",
-    "vue-tsc": "^0.38.9"
+    "vite": "^3.0.9",
+    "vite-plugin-cdn-externals": "^1.0.5"
   }
 }
