feat: support node anchor then you can pick any sub tree as the new markmap.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "d3": "^7.6.1",
     "hotkeys-js": "^3.10.0",
     "html2canvas": "^1.4.1",
+    "is-uuid": "^1.0.2",
     "jquery": "^3.6.1",
     "lightbox2": "^2.11.3",
     "markmap-common": "^0.14.2",
