--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "@logseq/libs": "^0.0.10",
-    "alpinejs": "^3.10.4",
+    "alpinejs": "^3.10.5",
     "cheerio": "^1.0.0-rc.12",
     "d3": "^7.6.1",
     "date-fns": "^2.29.3",
@@ -34,12 +34,14 @@
     "markmap-toolbar": "^0.14.3",
     "markmap-view": "^0.14.3",
     "org": "^0.2.0",
+    "pinia": "^2.0.23",
     "string-replace-async": "^3.0.2",
     "text-ellipsis": "^1.0.3",
     "turndown": "^7.1.1",
     "vue": "^3.2.41"
   },
   "devDependencies": {
+    "@types/node": "^18.11.8",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
     "@vitejs/plugin-vue": "^3.1.2",
@@ -50,6 +52,8 @@
     "prettier": "^2.7.1",
     "tailwindcss": "^3.2.1",
     "typescript": "^4.8.4",
+    "unplugin-auto-import": "^0.11.4",
+    "unplugin-vue-components": "^0.22.9",
     "vite": "^3.1.8",
     "vite-plugin-cdn-externals": "^1.1.1"
   }
