--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cheerio": "^1.0.0-rc.12",
     "d3": "^7.6.1",
     "date-fns": "^2.29.3",
+    "drauu": "^0.3.2",
     "hotkeys-js": "^3.10.0",
     "html2canvas": "^1.4.1",
     "is-uuid": "^1.0.2",
@@ -49,6 +50,7 @@
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.18",
+    "postcss-nesting": "^10.2.0",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.2.1",
     "typescript": "^4.8.4",
