--- a/package.json
+++ b/package.json
@@ -15,38 +15,42 @@
     "lint:fix": "npm run lint -- --fix",
     "prettier": "prettier -c .",
     "prettier:fix": "npm run prettier -- --write",
-    "dev": "vite",
-    "build": "vite build && cp LICENSE icon.png package.json dist/"
+    "dev": "VITE_CJS_IGNORE_WARNING=true vite",
+    "build": "VITE_CJS_IGNORE_WARNING=true vite build && cp LICENSE icon.png package.json dist/"
   },
   "dependencies": {
     "@logseq/libs": "^0.0.14",
-    "alpinejs": "^3.10.5",
     "cheerio": "^1.0.0-rc.12",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "d3": "^7.8.0",
     "date-fns": "^2.29.3",
     "drauu": "^0.3.2",
-    "element-plus": "^2.2.28",
     "hotkeys-js": "^3.10.1",
     "html2canvas": "^1.4.1",
     "is-uuid": "^1.0.2",
     "jquery": "^3.6.3",
     "lightbox2": "^2.11.3",
+    "lucide-vue-next": "^0.377.0",
     "markmap-common": "^0.14.2",
     "markmap-lib": "^0.14.3",
     "markmap-toolbar": "^0.14.3",
     "markmap-view": "^0.14.3",
     "org": "^0.2.0",
-    "pinia": "^2.0.28",
+    "pinia": "^2.1.7",
+    "radix-vue": "^1.7.3",
     "string-replace-async": "^3.0.2",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "text-ellipsis": "^1.0.3",
     "turndown": "^7.1.1",
-    "vue": "^3.2.45"
+    "vue": "^3.4.26"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
-    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue": "^5.0.4",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
@@ -57,7 +61,6 @@
     "typescript": "^4.9.4",
     "unplugin-auto-import": "^0.12.1",
     "unplugin-vue-components": "^0.22.12",
-    "vite": "^4.0.4",
-    "vite-plugin-cdn-externals": "^1.1.5"
+    "vite": "^5.2.11"
   }
 }
