--- a/package.json
+++ b/package.json
@@ -23,44 +23,42 @@
     "cheerio": "^1.0.0-rc.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "d3": "^7.8.0",
-    "date-fns": "^2.29.3",
-    "drauu": "^0.3.2",
-    "hotkeys-js": "^3.10.1",
+    "d3": "^7.9.0",
+    "date-fns": "^3.6.0",
+    "drauu": "^0.4.0",
+    "hotkeys-js": "^3.13.7",
     "html2canvas": "^1.4.1",
     "is-uuid": "^1.0.2",
-    "jquery": "^3.6.3",
-    "lightbox2": "^2.11.3",
-    "lucide-vue-next": "^0.377.0",
+    "jquery": "^3.7.1",
+    "lightbox2": "^2.11.4",
+    "lucide-vue-next": "^0.378.0",
     "markmap-common": "^0.14.2",
     "markmap-lib": "^0.14.3",
     "markmap-toolbar": "^0.14.3",
     "markmap-view": "^0.14.3",
     "org": "^0.2.0",
     "pinia": "^2.1.7",
-    "radix-vue": "^1.7.3",
+    "radix-vue": "^1.7.4",
     "string-replace-async": "^3.0.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "text-ellipsis": "^1.0.3",
-    "turndown": "^7.1.1",
-    "vue": "^3.4.26"
+    "turndown": "^7.1.3",
+    "vue": "^3.4.27"
   },
   "devDependencies": {
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
+    "@types/node": "^20.12.11",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
     "@vitejs/plugin-vue": "^5.0.4",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.31.0",
-    "eslint-config-prettier": "^8.6.0",
-    "postcss": "^8.4.21",
-    "postcss-nesting": "^10.2.0",
-    "prettier": "^2.8.2",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4",
-    "unplugin-auto-import": "^0.12.1",
-    "unplugin-vue-components": "^0.22.12",
+    "autoprefixer": "^10.4.19",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "postcss": "^8.4.38",
+    "postcss-nesting": "^12.1.2",
+    "prettier": "^3.2.5",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5",
     "vite": "^5.2.11"
   }
 }
